# RandDist

./: .gitignore  Notebook.ipynb  README.md  pyproject.toml  setup.cfg  test_randdist.py
demo/: Notebook.ipynb
randdist/: generate.py  randdist.py  test_randdist.py
src/RandDist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/randdist/: __init__.py  generate.py
tests/: test_randdist.py
