[metadata]
name = randdist
version = 0.0.1
author = Behrouz Sohrabi
author_email = sohrabi.beh@gmail.com
description = A random number generator with custom probability distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BehrouzSohrabi/Python-random-custom-distribution
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True