[metadata]
name = RandDist
version = 0.0.4
author = Behrouz Sohrabi
author_email = sohrabi.beh@gmail.com
description = A random number generator with custom probability distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BehrouzSohrabi/RandDist
project_urls =
    Bug Tracker = https://github.com/BehrouzSohrabi/RandDist/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src